--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "CodeXSync-Server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+  },
+
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
